force-app/main/default/objects/ActionPlanTemplate__c/ActionPlanTemplate__c.object-meta.xml
<CustomObject>
    <label>Action Plan Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>