force-app/main/default/objects/ActionPlanTemplate__c/fields/RelatedObjectType__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectType__c</fullName>
    <label>Related Object Type</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>