force-app/main/default/objects/ActionPlanTemplate__c/fields/SkipDay__c.field-meta.xml
<CustomField>
    <fullName>SkipDay__c</fullName>
    <description>In the case that &apos;Skip Weekends&apos; has been set and the due date would be either a Saturday or Sunday, set it instead to the value specified here, which would be the the following Monday, or the previous Friday.</description>
    <label>Skip Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SkipWeekends__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>