force-app/main/default/objects/ActionPlanTemplate__c/fields/TaskRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>TaskRecordTypeId__c</fullName>
    <label>Task Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>