force-app/main/default/objects/ActionPlanTemplate__c/listViews/All_Action_Plans.listView-meta.xml
<ListView>
    <fullName>All_Action_Plans</fullName>
    <columns>NAME</columns>
    <columns>RelatedObjectType__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Action Plan Templates</label>
</ListView>